<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Game strings -->
    <string name="app_name">GotYourBAC</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="baseline">Record Baseline</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome">Welcome to GotYourBAC!</string>
    <string name="check_games">Check games</string>
    <string name="help_games">Help</string>
    <string name="stroop_help_title">How to play Stroop:</string>
    <string name="stroop_help_body">
        To play the stroop game, you must begin by pressing Start Game. From there, a timer will begin that tracks the time it takes you
        to complete the game. Words will appear randomly on the screen with a designated color. It is your job to click the correct buttons that
        correspond to the words color. Get as many right in as little time as possible. Be sure to not press the wrong button, every wrong guess
        adds two seconds! \n\nGood luck!
    </string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>

    <!-- Sobriety levels via games strings-->
    <string name="sobriety_level_0">Thats weird, you scored better than your baseline. You must be very sober! Might we suggest taking your baseline again?</string>
    <string name="sobriety_level_1">You scored slighty worse than your baseline, you are most likely mildly intoxicated</string>
    <string name="sobriety_level_2">You scored significantly worse than your baseline, you are most likely intoxicated, watch out!</string>
    <string name="sobriety_level_3">You scored MUCH worse than your baseline, you are drunk! Slow down!</string>

    <!-- BAC strings -->
    <string name="numDrinks">Total Drinks:</string>
    <string name="bac">BAC:</string>

    <!-- Login strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight (in lbs)</string>
    <string name="sex">Sex</string>
    <string name="auth_failed">Authorization failed</string>
    <string name="ice_create_option">Please enter your emergency contact information or press skip to configure later.</string>
    <string name="ice_create_description">Your emergency contact information can later be used to quickly send texts in case of an emergency.</string>
    <string name="stroop_create_description">Please record a baseline for the Stroop test. This is designed to get an accurate baseline score to compare to future scores. Or press skip.</string>
    <string name="create_user_description">Please fill out all the information below. This will help us calculate and keep track of BAC levels and other vital data.</string>

    <string name="sex_prompt">Select Your Sex</string>
    <string name="email">Email</string>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_menu"></string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="start_game">Start Game</string>

    <string name="emergency_contact">Emergency Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="ice_name">Contact\'s Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="reset">Reset Password</string>
    <string name="sendpassword">Send</string>
    <string name="blood_alcohol_content_calulator">B.A.C. Calulator</string>
    <string name="welcome_to_strooptest">Welcome to the Stroop Game</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="stroop">Stroop</string>
    <string name="tilt">Tilt</string>
    <string name="pick">Pick a Game to Play</string>
    <string name="geoAPIkey">AIzaSyAUIMMNWHg3Scvn3t_ItkDQfzwk3mOVqeI</string>
    <string name="ok">OK</string>
    <string name="welcome_">Welcome!</string>
    <string name="end">End Game</string>
    <string name="here_are_your_last_3_scores">Here are your last 3 scores:</string>
    <string name="sendText">Send location</string>
    <string name="iceDescription">Your emergency contact will be sent your location if your battery falls below 10%</string>
    <string name="tiltDescription">Remember the sequence of directions that appear on the screen.
You will be given a short amount of time to recount each individual direction.
Once prompted, tilt your phone according to the sequence.
Note that there will be the same number of progress bars as directions.
Once time is up to guess a single direction, the progress bar will turn either green to indicate you remembered
correctly or red to indicate you remember incorrectly.</string>

    <string name="dir1">Remember the sequence of directions that appear on the screen.</string>
    <string name="dir2">You will be given a short amount of time to perform each individual direction.</string>
    <string name="dir3">Once prompted, tilt your phone according to the sequence</string>
    <string name="dir4">The possible directions are:</string>
    <string name="right">Right: </string>
    <string name="left">Left: </string>
    <string name="forward">Forward: </string>
    <string name="back">Back: </string>
    <string name="dir5">Tilt the phone right</string>
    <string name="dir6">Tilt the phone left</string>
    <string name="dir7">Tilt the phone toward you</string>
    <string name="dir8">Tilt the phone away from you</string>
    <string name="dir9">Once time is up to guess a single direction, the progress bar will turn either green to indicate you remembered correctly or red to indicate you did not.</string>
    <string name="howtoplaytilt">How to Play Tilt</string>

    <!--<string name="verificationEmail">Send Verification Email</string>-->

</resources>
