<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:weightSum="1"
    tools:context="com.undergrads.ryan.CreateNewUser"
    android:screenOrientation="portrait">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="119dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        tools:layout_constraintLeft_creator="1" />

    <Spinner
        android:id="@+id/sexSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:entries="@array/sex_array"
        android:prompt="@string/sex_prompt"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/edtWeight"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:text="Create User"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sexSpinner"
        app:layout_constraintVertical_bias="0.07"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="15dp"
        tools:layout_constraintLeft_creator="1"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:id="@+id/new_user_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user_description"
        android:textAppearance="@style/SubHeading"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="4dp"
        android:layout_marginTop="29dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>